--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="mainBackground">#B3420C0C</color>
+    <color name="menuBackground">#B3000000</color>
+    <color name="navigationContainerColor">#B31B2A47</color>
+    <color name="uiContainerBackground">#200A3A</color>
+    <color name="uiTextColor">#FFFFFF</color>
 </resources>
