--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -31,6 +31,7 @@
             android:text="Start new game" />
 
         <Button
+            android:id="@+id/button_best_results"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="View best results" />
