Refactoring of the game classes. MovePattern refactoring. Small gameflow fixes: waiting untill blast is gone before ending the game, not allowing to place a bomb before previous one is expired.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <FrameLayout
-        android:id="@+id/menu_fragment_container"
+    <include layout="@layout/game_menu"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
