--- a/app/src/main/res/layout/game_interface.xml
+++ b/app/src/main/res/layout/game_interface.xml
@@ -6,12 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/uiContainerBackground"
-    android:padding="8dp">
+    android:padding="12dp">
 
     <ImageView
         android:id="@+id/remaining_targets_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        style="@style/GameInterfaceIconStyle"
+        android:layout_marginStart="16dp"
         android:src="@drawable/ic_target"
         app:layout_constraintEnd_toStartOf="@id/remaining_targets_value"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -32,9 +32,8 @@
         tools:text="3" />
 
     <ImageView
+        style="@style/GameInterfaceIconStyle"
         android:id="@+id/remaining_bombs_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:src="@drawable/ic_bomb"
         app:layout_constraintEnd_toStartOf="@id/remaining_bombs_value"
@@ -55,9 +54,8 @@
         tools:text="5" />
 
     <ImageView
+        style="@style/GameInterfaceIconStyle"
         android:id="@+id/score_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:src="@android:color/holo_orange_dark"
         app:layout_constraintEnd_toStartOf="@id/score_value"
@@ -79,9 +77,9 @@
 
     <ImageButton
         android:id="@+id/button_menu"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        style="@style/GameInterfaceIconStyle"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/score_value"
         app:layout_constraintTop_toTopOf="parent" />
