--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,11 @@
     </style>
 
 
+    <style name="GameInterfaceIconStyle">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
+    </style>
+
     <style name="GameInterfaceTextStyle">
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
