--- a/app/src/main/res/layout/game_interface.xml
+++ b/app/src/main/res/layout/game_interface.xml
@@ -8,6 +8,30 @@
     android:background="@color/uiContainerBackground"
     android:padding="12dp">
 
+    <TextView
+        style="@style/GameInterfaceTextStyle"
+        android:id="@+id/level_number_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        android:text="Level"
+        android:textAllCaps="true"
+        app:layout_constraintEnd_toStartOf="@id/remaining_targets_image"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <TextView
+        style="@style/GameInterfaceTextStyle"
+        android:id="@+id/level_number_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="2"
+        app:layout_constraintStart_toStartOf="@id/level_number_label"
+        app:layout_constraintEnd_toEndOf="@id/level_number_label"
+        app:layout_constraintTop_toBottomOf="@id/level_number_label"/>
+
     <ImageView
         android:id="@+id/remaining_targets_image"
         style="@style/GameInterfaceIconStyle"
@@ -15,7 +39,7 @@
         android:src="@drawable/ic_target"
         app:layout_constraintEnd_toStartOf="@id/remaining_targets_value"
         app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/level_number_label"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -24,16 +48,16 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/remaining_bombs_image"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@id/remaining_targets_image"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="3" />
 
     <ImageView
-        style="@style/GameInterfaceIconStyle"
         android:id="@+id/remaining_bombs_image"
+        style="@style/GameInterfaceIconStyle"
         android:layout_marginStart="8dp"
         android:src="@drawable/ic_bomb"
         app:layout_constraintEnd_toStartOf="@id/remaining_bombs_value"
@@ -46,16 +70,16 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/score_image"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@id/remaining_bombs_image"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="5" />
 
     <ImageView
-        style="@style/GameInterfaceIconStyle"
         android:id="@+id/score_image"
+        style="@style/GameInterfaceIconStyle"
         android:layout_marginStart="8dp"
         android:src="@android:color/holo_orange_dark"
         app:layout_constraintEnd_toStartOf="@id/score_value"
@@ -68,9 +92,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        app:layout_constraintHorizontal_weight="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button_menu"
+        app:layout_constraintHorizontal_weight="2"
         app:layout_constraintStart_toEndOf="@id/score_image"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="152" />
