--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,10 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/uiTextColor</item>
     </style>
+
+    <style name="BestResultsTextStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@android:color/holo_orange_light</item>
+    </style>
 </resources>
