--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,11 +11,11 @@
 
     <style name="GameInterfaceIconStyle">
         <item name="android:layout_width">40dp</item>
-        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_height">match_parent</item>
     </style>
 
     <style name="GameInterfaceTextStyle">
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/uiTextColor</item>
     </style>
