--- a/app/src/main/res/layout/win_category_dialog.xml
+++ b/app/src/main/res/layout/win_category_dialog.xml
@@ -19,7 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/menuBackground"
-        android:clickable="true">
+        android:clickable="true"
+        app:showWhenEvent="@{viewModel.game.gameEvents.categoryWon}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
@@ -48,10 +49,10 @@
                 style="@style/BestResultsTextStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text='@{"Total category score: "+ viewModel.game.gameEvents.scoreChanged}'
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/win_category_dialog_title"
-                app:score='@{"Total category score: "+viewModel.game.gameEvents.levelWon}'
                 tools:text="Total category score: 534" />
 
             <Button
